[workspace]
resolver = "2"
members = [
    "crates/mina-relay",
    "crates/mina-light-node",
]

[workspace.dependencies]
# The Mina light node = mina-relay (this repo) + mina-verify (separate repo).
# mina-relay is proof-systems-agnostic (libp2p + message types only); the verifier
# is pulled in by the `mina-light-node` binary when wiring the trust gate.
mina-relay = { path = "crates/mina-relay" }

# Verifier — the trust gate. MESA build: pinned to
# MinaProtocol/mina-verify@release/mesa-account-reads (account-read API on the ab84160
# verifier), which uses dkijania/mina-rust@49cc4ea3 — so mina-p2p-messages below points
# at the SAME fork/rev to unify. proof-systems (ab84160) + num-bigint patches come
# transitively from mina-verify's workspace. (devnet/mainnet use o1-labs@ab69eaed; a
# single binary can't verify both 0.3.0 and ab84160 proofs — hence this separate build.)
mina-verify = { git = "https://github.com/MinaProtocol/mina-verify", rev = "7ec3285db4a36010a0cde3c412470d66ee59a93f" }

# openmina message types (proof-systems-agnostic subset used by mina-relay) — must
# match mina-verify's rev so the graph unifies on one mina-p2p-messages.
mina-p2p-messages = { git = "https://github.com/dkijania/mina-rust", rev = "49cc4ea3ab5de120c8fbac7fc50a5bbfc5589f8a" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
libp2p = { git = "https://github.com/o1-labs/rust-libp2p", rev = "e88cec09bd2554f4cc79ff90f200e4c864adf495", default-features = false }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
blake2 = "0.10"
hex = "0.4"
pin-project-lite = "0.2"
env_logger = "0.11"
log = "0.4"

# HTTP surface (light-node server): the trustless read/submit/mempool API a Rosetta
# adapter (MinaMesh) consumes. hyper 1.x + tower are already in the graph.
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Required by mina-p2p-messages' dep tree (multihash 0.18 -> yanked core2 0.4.0).
[patch.crates-io]
num-bigint = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" }
num-rational = { git = "https://github.com/openmina/num-rational", branch = "rebase-onstack" }
