[workspace]
resolver = "2"
members = [
    "crates/mina-relay",
    "crates/mina-light-node",
]

[workspace.dependencies]
# The Mina light node = mina-relay (this repo) + mina-verify (separate repo).
# mina-relay is proof-systems-agnostic (libp2p + message types only); the verifier
# is pulled in by the `mina-light-node` binary when wiring the trust gate.
mina-relay = { path = "crates/mina-relay" }

# Verifier — the trust gate. Pinned to MinaProtocol/mina-verify@main, which uses the
# same openmina rev (o1-labs/mina-rust@ab69eaed) as mina-relay below, so the
# mina-p2p-messages subtree unifies. proof-systems (0.3.0) + the num-bigint patches
# come transitively from mina-verify's workspace.
mina-verify = { git = "https://github.com/MinaProtocol/mina-verify", rev = "ab52b343f5efb2a7a214c0fb1e21353385718953" }

# openmina message types (proof-systems-agnostic subset used by mina-relay) — must
# match mina-verify's rev so the graph unifies on one mina-p2p-messages.
mina-p2p-messages = { git = "https://github.com/o1-labs/mina-rust", rev = "ab69eaed" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
libp2p = { git = "https://github.com/o1-labs/rust-libp2p", rev = "e88cec09bd2554f4cc79ff90f200e4c864adf495", default-features = false }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
blake2 = "0.10"
hex = "0.4"
pin-project-lite = "0.2"
env_logger = "0.11"
log = "0.4"

# HTTP query surface (mina-light-node-server): trustless reads / submit / mempool.
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Global allocator. The recursive-proof verifier (kimchi/pasta) makes large transient
# allocations per `verify_tip`; glibc malloc retains those pages across its per-thread
# arenas (8×ncores of them) and never returns them to the OS, so RSS ratchets to a high
# plateau (~470 MB observed) and tight `--memory` limits OOM-kill the container. jemalloc
# returns freed memory to the OS aggressively (dirty-decay), holding the plateau far lower.
tikv-jemallocator = "0.6"

# Required by mina-p2p-messages' dep tree (multihash 0.18 -> yanked core2 0.4.0).
[patch.crates-io]
num-bigint = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" }
num-rational = { git = "https://github.com/openmina/num-rational", branch = "rebase-onstack" }
