[package]
name = "mina-light-node"
version = "0.0.1"
edition = "2021"
description = "The Mina light node: joins the p2p network (mina-relay) and verifies the chain from its recursive proof (mina-verify). A trustless light client that participates in the network."
license = "Apache-2.0"

[[bin]]
name = "mina-light-node"
path = "src/main.rs"

[dependencies]
mina-relay = { workspace = true }
mina-verify = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
# Small synchronous HTTP server for the query surface (GET /tip, /healthz). Runs on its
# own thread alongside the gossip loop + verify worker — no async runtime needed for it.
tiny_http = "0.12"
serde_json = "1"
