[package]
name = "mina-light-node"
version = "0.0.1"
edition = "2021"
description = "The Mina light node: joins the p2p network (mina-relay) and verifies the chain from its recursive proof (mina-verify). A trustless light client that participates in the network."
license = "Apache-2.0"

[[bin]]
name = "mina-light-node"
path = "src/main.rs"

# The HTTP product: the node + a trustless read/submit/mempool API (axum).
[[bin]]
name = "mina-light-node-server"
path = "src/bin/server.rs"

[dependencies]
mina-relay = { workspace = true }
mina-verify = { workspace = true }
mina-p2p-messages = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
